# rust-wc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: char.rs  line.rs
tests/utils/: mod.rs
