[package]
name = "wordcount"
version = "0.1.0"
authors = ["aoki"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This command count simply a frequency of characters, words and lines."
readme = "README.md"
categories = ["command-line-utilities"] # https://crates.io/category_slugs
repository = "https://github.com/aoki/wordcount"
keywords = ["example", "frequency", "text"]
exclude = ["text.txt", "tests/*"]

[dependencies]
regex = "1.5.4"
